--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
+      background: rgb(65,130,65);
       color: white;
       text-align: center;
     }
