--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 </head>
 <body>
 
+<iframe src="https://discord.com/widget?id=1453094326153384098&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+  
 <header>
   <h1>Melwood Railways</h1>
   <nav>
